--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
+0.08 - Thu Jun 14 17:24:45 PDT 2018
+ - Fix RT ticket #121706: Makefile.PL fails without '.' in @INC
+   Add '.' to @INC for Makefile.PL only
+
 0.07 - Mon Oct 14 20:41:41 PDT 2013
  - Hide other distribution modules from PAUSE - via shibayu36
+
 0.06 - Sat Jul 16 10:26:33 PDT 2011
  - Update Makefile.PL and META.yml for RT #69466
 
