--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.09 - Thu Jan 31 20:00:04 PST 2019
+ - Fix RT ticket #25469: please add a HOWTO to the docs!
+   Added examples directory and a HOWTO.md
+
 0.08 - Thu Jun 14 17:24:45 PDT 2018
  - Fix RT ticket #121706: Makefile.PL fails without '.' in @INC
    Add '.' to @INC for Makefile.PL only
